Audio source and respective tests load from xml config file. Silence checker is doin' it's job badly. Actually the testers code is not that good at the moment. TODO:  - Need to add `tee` to make parallel audio testing and `queue` for each so that it's done in a separate thread; Kill all audio output, and make audio output source selectable.  - Config UI for our sources and their respective tests.

--- a/afm/gui/data/glade/main_window.glade
+++ b/afm/gui/data/glade/main_window.glade
@@ -35,37 +35,33 @@
           </packing>
         </child>
         <child>
-          <widget class="GtkHBox" id="buttonsHBox">
+          <widget class="GtkHButtonBox" id="hbuttonbox1">
             <property name="visible">True</property>
             <property name="homogeneous">True</property>
+            <property name="layout_style">spread</property>
+            <child>
+              <widget class="GtkButton" id="viewSourcesButton">
+                <property name="label" translatable="yes">Sources</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+              </widget>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
             <child>
               <placeholder/>
             </child>
             <child>
-              <widget class="GtkButton" id="button2">
-                <property name="label" translatable="yes">button</property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
-              </widget>
-              <packing>
-                <property name="position">1</property>
-              </packing>
-            </child>
-            <child>
-              <widget class="GtkButton" id="button1">
-                <property name="label" translatable="yes">button</property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
-              </widget>
-              <packing>
-                <property name="position">2</property>
-              </packing>
+              <placeholder/>
             </child>
           </widget>
           <packing>
             <property name="expand">False</property>
+            <property name="padding">2</property>
             <property name="position">1</property>
           </packing>
         </child>
